2004-07-29 Scott Dattalo <scott@dattalo.com>
	* src/14bit-instructions.cc, src/16bit-instructions.cc, src/pic-instructions.cc,
	src/pic-registers.cc, src/trace.cc, src/trace.h: The newly rewritten
	trace printing code was broken. The good news is that while fixing
	it, I found a way to save a little simulation time by not tracing
	the instruction opcodes.

2004-07-29 Scott Dattalo <scott@dattalo.com>
	* src/ioports.cc, src/ioports.h, src/modules.cc, src/registers.cc,
	src/registers.h, src/stimuli.cc, src/stimuli.h:
	Minor stimuli bug fixes, commenting and general cleanup.
	* cli/cmd_trace.cc, src/trace.cc, src/trace.h, src/trace_orb.h,
	src/pic-registers.cc, src/processor.cc, src/processor.h:
	Rewrote the trace printing code.

2004-07-24 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.def: updated exports
	* plat/win32/gpsim.nsi: don't cd when running gpsim
	* doc/gpsimWin32.html: XHTML 1.0 compliant, snapshots at a separate page

2004-07-22 Scott Dattalo <scott@dattalo.com>
	* src/stimuli.cc, modules/resistor.cc, modules/resistor.h:
	Bug fixes to the recent I/O pin redesign
	
2004-07-22 Scott Dattalo <scott@dattalo.com>
	* src/14bit-tmrs.cc, src/breakpoints.cc, src/breakpoints.h, 
	src/i2c-ee.cc, src/ioports.cc, src/ioports.h, src/p16x7x.cc,
	src/p16x7x.h, src/packages.cc, src/pic-processor.h, src/processor.cc,
	src/processor.h, src/registers.cc, src/registers.h, src/ssp.cc,
	src/stimuli.cc, src/stimuli.h, src/uart.cc, modules/binary_indicator.cc,
	modules/binary_indicator.h, modules/led.cc, modules/led.h,
	modules/logic.cc, modules/logic.h, modules/paraface.cc,
	modules/paraface.h, modules/resistor.cc, modules/resistor.h,
	modules/usart.cc, modules/video.cc, modules/video.h:
	Rewrote the way stimuli are handled. Before, gpsim only used
	a single parameter (more or less) to represent the state of
	an stimulus. Now, two parameters are used. Currently, these
	parameters are designated as the voltage and impedance. Before,